update delivery machanisum
